SOLID
Fix: Instanciar somente dentro da entidade