@@ -1,11 +1,10 @@
 package br.com.chronicles.service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
-import br.com.chronicles.interfaces.ReaderServiceImpl;
 import org.springframework.stereotype.Service;
 
+import br.com.chronicles.interfaces.ReaderServiceImpl;
 import br.com.chronicles.model.entity.Reader;
 import br.com.chronicles.model.request.ReaderRegisterDTO;
 import br.com.chronicles.model.request.ReaderUpdateDTO;
@@ -23,14 +22,14 @@ public class ReaderService implements ReaderServiceImpl {
 
 	@Override
 	public List<ReaderDetailsDTO> findAll() {
-		return readerRepository.findAllActive().stream().map(ReaderDetailsDTO::new).collect(Collectors.toList());
+		return readerRepository.findAllActive().stream().map(ReaderDetailsDTO::new).toList();
 	}
-	
+
 	@Override
 	public void delete(Long id) {
 		readerRepository.save(findById(id).disable());
 	}
-	
+
 	@Override
 	public void deletePermanently(Long id) {
 		readerRepository.delete(findById(id).disable());
@@ -40,17 +39,17 @@ public class ReaderService implements ReaderServiceImpl {
 	public ReaderDetailsDTO update(ReaderUpdateDTO dto, Long id) {
 		return new ReaderDetailsDTO(readerRepository.save(findById(id).atualizar(dto)));
 	}
-	
+
 	@Override
 	public ReaderDetailsDTO register(ReaderRegisterDTO dto) {
-		return new ReaderDetailsDTO(readerRepository.save(new Reader().registrar(dto)));
+		return new ReaderDetailsDTO(readerRepository.save(Reader.registrar(dto)));
 	}
-	
+
 	@Override
 	public void active(Long id) {
 		readerRepository.save(findById(id).active());
 	}
-	
+
 	@Override
 	public Reader findById(Long id) {
 		return readerRepository.findById(id).orElseThrow(() -> new RuntimeException("Leitor não encontrado"));
